# pyhydrate

./: .gitattributes  .gitignore  .readthedocs.yaml  CLAUDE.md  claude.md  demo.py  main.py  pyproject.toml  readme.md  requirements.txt  ruff.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  PULL_REQUEST_TEMPLATE.md  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_need.md  feature_request.md  readme.md
.github/deploy/: readme.md
.github/workflows/: preprod.yml  prod-tests.yml  readme.md  stage-tests.yml  version-deployment.yml  workflow.yml
docs/: changelog.rst  conf.py  contributing.rst  error_handling.rst  formats.rst  index.rst  installation.rst  performance.rst  quickstart.rst  requirements.txt  usage.rst
docs/_static/: custom.css
docs/api/: exceptions.rst  notation.rst  pyhydrate.rst
pyhydrate/: __init__.py  error_handling.py  pyhydrate.py  pyhydrate.pyi  readme.md  types.py
pyhydrate/data/: basic-dict-get.json  basic-list-get.json  basic-test-001.json  init-test-data.json  init-test-data.toml  init-test-data.yaml  readme.md
pyhydrate/exceptions/: __init__.py  immutable_conversion_warning.py  readme.md
pyhydrate/notation/: __init__.py  notation_base.py  notation_dumper.py  notation_primitive.py  notation_proxy.py  notation_representation.py  notation_structures.py  readme.md
tests/: __init__.py  array_edge_cases_tests.py  call_tests.py  cloud_save_tests.py  complete-test-001.json  dict_get_tests.py  dict_read_tests.py  error_handling_tests.py  initialization_tests.py  input_type_tests.py  list_get_tests.py  magic_methods_tests.py  memory_efficiency_tests.py  none_serialization_tests.py  primitive_get_tests.py  proxy_depth_tests.py  readme.md  repr_method_tests.py  save_tests.py  write_tests.py
