[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'pyhydrate'
version = '0.0.0'
description = 'A JFDI approach that hydrates a Python class to allow dot notation access to the data structures.'
readme = "readme.md"
authors = [
    {name = 'Michael Flanigan', email = '7891356+mjfii@users.noreply.github.com'}
]
license = {file = 'license'}
dependencies = [
    'typing-extensions',
    'pyyaml',
    'toml',
    'tomli; python_version < "3.11"',
]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent'
]
requires-python = '>=3.8'

[project.optional-dependencies]
dev = [
    'ruff==0.12.1',
    'build',
]
